# Agentic-AI-Playground

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: Filtering-Summarizer.ipynb  Human_assisted_Learning_Agent.ipynb  Summarizer + Critique.ipynb  research_agent_advanced.ipynb  story creator agent.ipynb
src/Research-RLHF/: frontend.py  research_rlhf_advanced.py  research_rlhf_agent.py  research_rlhf_agent_groq.py
src/Summary-Critic/: main.py  summarizer_critic_agent  summarizer_critic_agent.py
