[project]
name = "agentic-ai-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.9.1",
    "fastapi>=0.121.2",
    "langchain~=1.0.3",
    "langchain-core~=1.0.3",
    "langchain-google-genai~=3.0.1",
    "langchain-groq>=1.0.1",
    "langchain-openai~=1.0.2",
    "langgraph~=1.0.2",
    "pydantic~=2.12.4",
    "python-dotenv~=1.2.1",
    "streamlit>=1.51.0",
]
